--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".List"
+            android:name=".ListActivity"
             android:label="@string/songs"
             android:parentActivityName=".MainActivity">
             <!-- Parent activity meta-data to support 4.0 and lower -->
@@ -26,7 +26,7 @@
         </activity>
 
         <activity
-            android:name=".NowPlaying"
+            android:name=".NowPlayingActivity"
             android:label="@string/nowPlaying"
             android:parentActivityName=".MainActivity">
             <!-- Parent activity meta-data to support 4.0 and lower -->
@@ -36,7 +36,7 @@
         </activity>
 
         <activity
-            android:name=".Search"
+            android:name=".SearchActivity"
             android:label="@string/search"
             android:parentActivityName=".MainActivity">
             <!-- Parent activity meta-data to support 4.0 and lower -->
@@ -46,7 +46,7 @@
         </activity>
 
         <activity
-            android:name=".Store"
+            android:name=".StoreActivity"
             android:label="@string/store"
             android:parentActivityName=".MainActivity">
             <!-- Parent activity meta-data to support 4.0 and lower -->
